--- a/Index.html
+++ b/Index.html
@@ -37,24 +37,91 @@
 							<article></article>
 						</div>
 					</section>
-				<!-- Muestra menu-->
+				<!-- Muestra Amazing Huge-->
 					<section>
-						<div>
-							<section>
+						<div><!--contenido-->
+							<div>
 								<article></article>
 								<article></article>
 								<article></article>
 								<article></article>
+							</div>
+							<!--imagen-->
+							<div>
 								<article></article>
 								<article></article>
 								<article></article>
 								<article></article>
-								<article></article>
-								<article></article>
-							</section>
+							</div>
 						</div>
 					</section>
-		</header>	
+
+			<!--Huge Core Features-->
+					<section>
+						<article>
+							<div>
+							<!--imagen-->	
+							</div>
+						</article>>
+					</section>
+			<!--Introduce Your Staff-->
+					<section>
+						<div>
+							<article></article>
+							<article></article>
+							<article></article>
+							<article></article>
+
+						</div>
+					</section>
+						<!--Premium Wordpress Theme-->
+
+					<section>
+						<div>
+							<article></article>
+							<article></article>
+							<article></article>
+						</div>
+					</section>
+						<!--Latest Blog Post-->
+
+					<section>
+						<div>
+							<article></article>
+							<article></article>
+							<article></article>
+							<article></article>
+						</div>
+					</section>
+					<!--Colorful Pricing Tables-->
+					<section>
+						<div>
+							<article></article>
+							<article></article>
+							<article></article>
+						</div>
+					</section> 	
+				<footer>
+						<!--Probando el GIT-->
+					<div>
+						<nav></nav>
+						<nav></nav>
+					</div>
+						<article></article>
+						<article>
+							<nav></nav>
+						</article>
+						<article></article>
+						<article>
+							<nav></nav>
+						</article>
+					</div>
+					<div>
+						<nav></nav>
+						<div></div>
+					</div>
+				</footer>
+		</header>
 	</body>
 </html>
 
